--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bluetooth_serial: ^0.4.0
+  flutter_blue_plus: ^1.30.3
 
 
   # The following adds the Cupertino Icons font to your application.
