--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_bluetooth_serial: ^0.4.0
   flutter_blue_plus: ^1.30.3
+  image: ^3.0.1
+  flutter_svg: ^0.22.0
 
 
   # The following adds the Cupertino Icons font to your application.
